@@ -1,6 +1,6 @@
 ---
 name: Term-Menus
-version: 1.09
+version: 1.1
 author:
   - Brian Kelly <Brian.Kelly@fullautosoftware.net>
 abstract: 'Create Powerful Terminal, Console and CMD Enviroment Menus'
@@ -10,5 +10,5 @@ requires:
 provides:
   Term::Menus:
     file: lib/Term/Menus.pm
-    version: 1.09
+    version: 1.1
 generated_by: Module::Build version 0.261
