@@ -15,18 +15,18 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 eddb7047c79938e9a1ff11cd6df7e4c52a680661 Build.PL
-SHA1 e419dbd1575e78726c80ffa82cb008c10f972e2b ChangeLog
+SHA1 db76be00c08c98e40fd99b8f81a78d0e1d35b177 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 b60e58dabe06df867326f357a6d73f197d15daab MANIFEST
-SHA1 53c7b62d6c897e48c6116ee7f4ea2238aa79b6b9 META.yml
+SHA1 8a5eb25d18843fb937be3a1b91d86b9393ff6d08 META.yml
 SHA1 f66acde86158aa6f0acaea3454b97faeedd21d74 Makefile.PL
-SHA1 85689e0dbf618eeb3a9e96326838ae690330f9ba README
-SHA1 e0ded0529b6ecbd0a7b4f003f95158ab7603481b lib/Term/Menus.pm
+SHA1 a78339511aaf57bffbac3469932703dcfa6198d8 README
+SHA1 f91c99c02453ad40a102aed869edd9e7bca97449 lib/Term/Menus.pm
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.0 (Cygwin)
 
-iD8DBQFCn8lem9P/2BC89ZsRAuQPAJ4qianH9dcJi8GIZYPfSZDA+VjZSACeMxy2
-kFvggnCAVhH7Cr2ZRO329Pk=
-=Nl+S
+iD8DBQFCzwo6m9P/2BC89ZsRAmqyAJwNtyEJFrRUIu1e8IHYIqjgW+nf8QCeKYt/
+XicJBLfobvQ0D4mtkjMAi50=
+=UzwQ
 -----END PGP SIGNATURE-----
