@@ -1,3 +1,10 @@
+2005-07-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.1 released.
+
+        * Added new feature - "View Selections Summary with
+          Star '*' Key" functionality
+
 2005-06-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.09 released.
